subsription  quantity alignment issue

--- a/stylesheets/pages/subscription.less
+++ b/stylesheets/pages/subscription.less
@@ -1474,7 +1474,7 @@
 					}
 					.popup{
 	                .popup-body{
-	                    width: 45%;
+	                    width: 80%;
 	                    .close-icon{
 	                        top: 16px;
 	                        right: 10px;
@@ -1669,12 +1669,12 @@
 										    	    }
 										    	    .spinner{
 										    	    	&.increment{
-									    	    		    left: 1px;
+									    	    		    left: 13%;
 														    border: 0px;
 														    height: 36px;
 										    	    	}
 										    	    	&.decrement{
-									    	    		    right: 14%;
+									    	    		    right: 1%;
 														    border: 0px;
 														    height: 36px;
 														    top: 1px;
@@ -1831,7 +1831,7 @@
 								    	        width: 14.2%;
 												float: right;
 									    	    .quantity-sub{
-							    	    	        padding: 6.5% 22%;
+							    	    	        padding: 8.5% 22%;
 													width:43%;
 									    	    }
 									    	    .spinner{
